crates/cos-core/tests/compile_fail/cannot_execute_from_draft.stderr
error[E0599]: no method named `execute` found for struct `cos_core::domain::DeletionCOS<cos_core::domain::Draft>` in the current scope
  --> tests/compile_fail/cannot_execute_from_draft.rs:10:17
   |
10 |     let _ = cos.execute();
   |                 ^^^^^^^ method not found in `cos_core::domain::DeletionCOS<cos_core::domain::Draft>`
   |
   = note: the method was found for
           - `cos_core::domain::DeletionCOS<cos_core::domain::Converged>`
